Refactoring: split questions by topic, added more questions and topics